Update HelloDataTypesByte.java